<resources>
    <string name="app_name">哇券</string>

    <string name="webview_test">WebView代理</string>
    <string name="login_test">登录</string>
    <string name="logout_test">退出登录</string>
    <string name="transaction_test">电商交易</string>
    <string name="mine_test">订单与购物车</string>
    <string name="default_showurl">https://s.click.taobao.com/ghj</string>
    <string name="default_open">默认方式</string>
    <string name="taobao_open">手淘</string>
    <string name="tmall_open">天猫</string>
    <string name="h5_open">H5</string>
    <string name="open_type">打开方式:</string>
    <string name="commodity_type">商品类型:</string>
    <string name="common_commodity">普通商品</string>
    <string name="taoke_commodity">淘客商品</string>
    <string name="input_url">请输入URL:</string>
    <string name="open_url">打开URL</string>
    <string name="isconfuse">商品id是否混淆:</string>
    <string name="notconfuse">不混淆</string>
    <string name="confuse">混淆</string>
    <string name="input_itemid">请输入商品id:</string>
    <string name="itemid">542651106234</string>
    <string name="open_item">打开商品详情页</string>
    <string name="add_item_to_cart">添加商品到购物车</string>
    <string name="input_shopid">请输入店铺id:</string>
    <string name="shopid">60552065</string>
    <string name="open_shop">打开店铺</string>
    <string name="order_type">订单页面参数(仅在H5打开方式下有效):</string>
    <string name="order_all">全部</string>
    <string name="order_topay">待付款</string>
    <string name="order_tosend">待发货</string>
    <string name="order_toreceive">待收货</string>
    <string name="order_tocomment">待评价</string>
    <string name="show_order">分域显示我的订单</string>
    <string name="show_allorder">全部显示我的订单</string>
    <string name="show_cart">显示我的购物车</string>

    <string name="shar_down">分享下载</string>
    <string name="agent">申请成为代理</string>
    <string name="parter">合伙人系统</string>

    <string name="my_help">客户帮助</string>
    <string name="my_return">意见反馈</string>
    <string name="my_clean">清理缓存</string>
    <string name="my_about">关于</string>

    <string name="my_stat">免责声明</string>
    <string name="app_stat">提醒您：在使用本产品前，请您务必仔细阅读并透彻理解本声明。您可以选择不使用，但如果您使用，您的使用行为将被视为对本声明全部内容的认可。\n\n 1.其他一切因使用本产品而可能遭致的意外、疏忽、侵权及其造成的损失（包括因下载被搜索链接到的第三方网站内容 而感染电脑病毒），对其概不负责，亦不承担任何法律责任。\n\n"2.您应该对使用购买的结果自行承担风险。我们不做任何形式的保证：不保证展示信息结果满足您的要求，不保证购买服务不中断，不保证搜索结果的安全性、正确性、及时性、 合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用，我们不承担任何法律责任。\n\n3.任何单位或个人认为通过本产品搜索链接到的第三方网页 内容可能涉嫌侵犯其信息网络传播权，应该及时向我们提出 书面权利通知，并提供身份证明、权属证明及详细侵权情况 证明。在收到上述法律文件后，将会依法尽快断开相关链接 内容。详情参见特定频道的著作权保护声明。</string>

    <string name="goods_accept">领券购买</string>

    <string name="notext">未填写</string>

    <string name="my_order">淘宝订单</string>
    <string name="my_cart">购物车</string>
    <string name="my_jf">更多</string>

    <string name="person_head">头像</string>
    <string name="person_nickname">昵称</string>
    <string name="person_code">邀请码</string>
    <string name="person_qq">客服QQ</string>
    <string name="person_weixin">客服微信</string>
    <string name="person_taobao">淘宝账号授权状态</string>

    <string name="news_title_ttTxt">头条</string>
    <string name="news_title_ycTxt">宜昌</string>
    <string name="news_title_qsycTxt">轻松一刻</string>
    <string name="news_title_caijinTxt">财经</string>
    <string name="news_title_kejiTxt">科技</string>

    <string name="search_search">搜索</string>
    <string name="search_canser">取消</string>

    <string name="commit">提交</string>
    <string name="type">类型</string>
    <string name="link">联系方式</string>

    <string name="hot">最新</string>
    <string name="sale">销量</string>
    <string name="price">价格</string>
    <string name="coupon">券面值</string>

    <string name="about_content">  哇券每日上新全网最新优惠券，涵盖购物攻略，好货挑选，每天上万优惠券免费抢，抢到就是赚到，让你惊奇让你尖叫，如双十一般省钱，似实体购物般体验！\n\n【每日上新】每天最新精选优惠券排行，衣食住行全覆盖，随手翻一下就能享受低价优质，还有意外惊喜哦。\n\n【哇券日报】一天当中最给力的优惠信息汇总，当日必看日报，有助于您发现更好的优惠信息。\n\n【哇券精选】网购达人晒单聚集地，分享网购经验心得，体验式购物，近期流行全覆盖，治愈选择困难症。\n\n【必抢神券】品牌货，良心价，各类大牌内部优惠券汇集地，只有想不到，没有领不到。\n\n【9.9包邮】用券后不超9.9元，还包邮。居家日常必备没事多看看。\n\n【视频购物】宝贝细节全方位预览，网购新潮流，大小视频随意看，高逼格购物。\n</string>
</resources>
