<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/border_padding_10">
        <ImageView android:id="@+id/iv_1" android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/share"/>
        <TextView android:layout_centerVertical="true" android:layout_toRightOf="@+id/iv_1" android:text="@string/shar_down"
                  android:layout_marginLeft="@dimen/border_padding_5"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_centerVertical="true" android:text=">" android:layout_alignParentRight="true"
                   android:layout_width="wrap_content"
                  android:layout_marginRight="@dimen/border_padding_5"
                   android:src="@mipmap/go"
                  android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorDivideLine"
          android:layout_marginLeft="@dimen/border_padding_5"
          android:layout_marginRight="@dimen/border_padding_5"
    />

    <RelativeLayout
            android:id="@+id/rl_help"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/border_padding_10">
        <ImageView android:id="@+id/iv_2" android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/help"/>
        <TextView android:layout_centerVertical="true" android:layout_toRightOf="@+id/iv_2" android:text="@string/my_help"
                  android:layout_marginLeft="@dimen/border_padding_5"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_centerVertical="true" android:text=">" android:layout_alignParentRight="true"
                   android:layout_width="wrap_content"
                   android:layout_marginRight="@dimen/border_padding_5"
                   android:src="@mipmap/go"
                   android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorDivideLine"
          android:layout_marginLeft="@dimen/border_padding_5"
          android:layout_marginRight="@dimen/border_padding_5"
    />

    <RelativeLayout
            android:id="@+id/rl_feedback"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/border_padding_10">
        <ImageView android:id="@+id/iv_3" android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/feedback"/>
        <TextView android:layout_centerVertical="true" android:layout_toRightOf="@+id/iv_3" android:text="@string/my_return"
                  android:layout_marginLeft="@dimen/border_padding_5"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_centerVertical="true" android:text=">" android:layout_alignParentRight="true"
                   android:layout_width="wrap_content"
                   android:layout_marginRight="@dimen/border_padding_5"
                   android:src="@mipmap/go"
                   android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="@dimen/border_padding_10"
          android:background="@color/colorDivideLine"
    />

    <RelativeLayout
            android:id="@+id/rl_clean"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/border_padding_10">
        <ImageView android:id="@+id/iv_4" android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/clear"/>
        <TextView android:layout_centerVertical="true" android:layout_toRightOf="@+id/iv_4" android:text="@string/my_clean"
                  android:layout_marginLeft="@dimen/border_padding_5"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_centerVertical="true" android:text=">" android:layout_alignParentRight="true"
                   android:layout_width="wrap_content"
                   android:layout_marginRight="@dimen/border_padding_5"
                   android:src="@mipmap/go"
                   android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorDivideLine"
          android:layout_marginLeft="@dimen/border_padding_5"
          android:layout_marginRight="@dimen/border_padding_5"
    />


    <RelativeLayout
            android:id="@+id/rl_stat"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/border_padding_10">
        <ImageView android:id="@+id/iv_5" android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/stat"/>
        <TextView android:layout_centerVertical="true" android:layout_toRightOf="@+id/iv_5" android:text="@string/my_stat"
                  android:layout_marginLeft="@dimen/border_padding_5"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_centerVertical="true" android:text=">" android:layout_alignParentRight="true"
                   android:layout_width="wrap_content"
                   android:layout_marginRight="@dimen/border_padding_5"
                   android:src="@mipmap/go"
                   android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorDivideLine"
          android:layout_marginLeft="@dimen/border_padding_5"
          android:layout_marginRight="@dimen/border_padding_5"
    />

    <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/border_padding_10">
        <ImageView android:id="@+id/iv_6" android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/about"/>
        <TextView android:layout_centerVertical="true" android:layout_toRightOf="@+id/iv_6" android:text="@string/my_about"
                  android:layout_marginLeft="@dimen/border_padding_5"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:layout_centerVertical="true" android:text=">" android:layout_alignParentRight="true"
                   android:layout_width="wrap_content"
                   android:layout_marginRight="@dimen/border_padding_5"
                   android:src="@mipmap/go"
                   android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>
